# packages/backend/src/health/health.controller.ts
@@ -1,0 +1,15 @@
+import { Controller, Get, HttpStatus } from '@nestjs/common'
+import { ApiResponse } from '@nestjs/swagger'
+import { GetHealthDto } from './health.dto'
+
+@Controller('health')
+export class HealthController {
+  @ApiResponse({
+    status: HttpStatus.OK,
+    type: GetHealthDto,
+  })
+  @Get()
+  async get(): Promise<GetHealthDto> {
+    return new GetHealthDto('health check is OK!')
+  }
+}
